@@ -1,5 +1,9 @@
 2003-08-07 Damien Sandras  <dsandras@seconix.com>
 
+	* src/videograbber.cpp: Fixed leak.
+
+2003-08-07 Damien Sandras  <dsandras@seconix.com>
+
 	* src/videograbber.cpp: Removed unuseful delete (grabber).
 	
 2003-08-07 Damien Sandras  <dsandras@seconix.com>
